// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features > random > RandomReducer updates state according to dispatched action 1`] = `
{
  "hasError": false,
  "isFulfilled": true,
  "isLoading": false,
  "number": 1,
}
`;

exports[`features > random > RandomReducer updates state according to dispatched action 2`] = `
{
  "hasError": false,
  "isFulfilled": false,
  "isLoading": true,
  "number": undefined,
}
`;

exports[`features > random > RandomReducer updates state according to dispatched action 3`] = `
{
  "hasError": true,
  "isFulfilled": false,
  "isLoading": false,
  "number": undefined,
}
`;
